refactor: Frames 자료구조 변경 - 피드백 반영
- ArrayList -> LinkedList